--- a/web/WEB-INF/espaces/templates/espaceAdmin.xhtml
+++ b/web/WEB-INF/espaces/templates/espaceAdmin.xhtml
@@ -19,6 +19,9 @@
             <small>Membre depuis #{empty adminBean.dateInscription ? '' : adminBean.dateInscriptionStr()}</small>
         </p>
     </ui:define>
+    <ui:define name="profil-btn">
+        <pretty:link mappingId="EspaceA_Profil" styleClass="btn btn-default btn-flat"> Profil </pretty:link>
+    </ui:define>
     <ui:define name="logout-btn">
         <h:form>
             <h:commandLink styleClass="btn btn-danger btn-sm btn-flat" value="Deconnexion" action="#{adminBean.logout()}"/>
