--- a/web/WEB-INF/espaces/templates/espaceAdmin.xhtml
+++ b/web/WEB-INF/espaces/templates/espaceAdmin.xhtml
@@ -100,7 +100,11 @@
                 </li>
             </ul>
         </li>
-
+        <li>
+            <pretty:link mappingId="EspaceA_Config">
+                <i class="fa fa-gear"></i> <span> Configurations</span>
+            </pretty:link>
+        </li>
     </ui:define>
 
 </ui:composition>
