--- a/web/WEB-INF/espaces/templates/espaceProfesseur.xhtml
+++ b/web/WEB-INF/espaces/templates/espaceProfesseur.xhtml
@@ -99,12 +99,17 @@
 
         <li>
             <pretty:link mappingId="gestionMatiereP">
-                <i class="fa fa-book"></i> <span> Gestion des Matières </span>
+                <i class="fa fa-book"></i> <span> Gestion des Offres </span>
             </pretty:link>
         </li>
         <li>
             <pretty:link mappingId="EspaceP_GestionCMD">
                 <i class="fa fa-cart-plus"></i> <span> Gestion des Commandes </span>
+            </pretty:link>
+        </li>
+        <li>
+            <pretty:link mappingId="EspaceP_GestionCours">
+                <i class="fa fa-book"></i> <span> Gestion des Cours </span>
             </pretty:link>
         </li>
 
