--- a/web/WEB-INF/espaces/templates/espaceAdmin.xhtml
+++ b/web/WEB-INF/espaces/templates/espaceAdmin.xhtml
@@ -28,51 +28,38 @@
         </h:form>
     </ui:define>
 
-    <ui:define name="messages">
-        <li class="dropdown messages-menu">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                <i class="fa fa-envelope-o"></i>
-                <span class="label label-success">4</span>
-            </a>
-            <ul class="dropdown-menu">
-                <li class="header">Vous avez 4 messages</li>
-                <li>
-                    <ul class="menu">
-                        <li>
-                            <a href="#">
-                                <div class="pull-left">
-                                    <h:graphicImage library="img" name="avatar5.png"/>
-                                </div>
-                                <h4>
-                                    Support Team
-                                    <small><i class="fa fa-clock-o"></i> 5 mins</small>
-                                </h4>
-                                <p>Why not buy a new awesome theme?</p>
-                            </a>
-                        </li>
-                    </ul>
-                </li>
-                <li class="footer"><a href="#">Voir tous les Messages</a></li>
-            </ul>
-        </li>
-    </ui:define>
+    
 
-    <ui:define name="notifications">
+     <ui:define name="notifications">
         <li class="dropdown notifications-menu">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                 <i class="fa fa-bell-o"></i>
-                <span class="label label-warning">10</span>
+                <span class="label label-warning">
+                    <c:choose>
+                        <c:when test="#{adminGestionProfInscriptionsBean.emptyInscriptions()}">
+                            0
+                        </c:when>
+                        <c:otherwise>
+                            #{adminGestionProfInscriptionsBean.inscriptions.size()}
+                        </c:otherwise>
+                    </c:choose>
+                </span>
             </a>
             <ul class="dropdown-menu">
-                <li class="header">You have 10 notifications</li>
+                <li class="header">
+                    Vous avez #{adminGestionProfInscriptionsBean.inscriptions.size()} notifications.
+                </li>
                 <li>
                     <!-- inner menu: contains the actual data -->
                     <ul class="menu">
-                        <li>
-                            <a href="#">
-                                <i class="fa fa-users text-aqua"></i> 5 new members joined today
-                            </a>
-                        </li>
+                        <ui:repeat value="#{adminGestionProfInscriptionsBean.inscriptions}" var="notif">
+                            <li>
+                                <pretty:link mappingId="GestionProfInscription">
+                                    <i class="fa fa-users text-aqua"></i>
+                                    <h:outputText title="Professeur #{notif.nom} #{notif.prenom} est inscrit." value="Professeur #{notif.nom} #{notif.prenom} est inscrit."/>
+                                </pretty:link>
+                            </li>
+                        </ui:repeat>
                     </ul>
                 </li>
                 <li class="footer"><a href="#">View all</a></li>
@@ -96,6 +83,20 @@
                 <li>
                     <pretty:link mappingId="EspaceA_LMatieres">
                         <i class="fa fa-circle-o"></i> Liste des Matières
+                    </pretty:link>
+                </li>
+            </ul>
+        </li>
+        <li class="treeview">
+            <a href="#">
+                <i class="fa fa-book"></i>
+                <span> Gestion des Professeurs </span>
+                <i class="fa fa-angle-left pull-right"></i>
+            </a>
+            <ul class="treeview-menu">
+                <li>
+                    <pretty:link mappingId="GestionProfInscription">
+                        <i class="fa fa-circle-o"></i> Gestion des Inscriptions
                     </pretty:link>
                 </li>
             </ul>
